--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ button {
 .header_section {
     width: 100%;
     float: left;
-    background-image: url(../images/banner-bg.png);
+    background-image: url(../images/banner-bg.webp);
     height: auto;
     padding-top: 27px;
     padding-bottom: 25px;
